--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "yarn install:clean",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && yarn install",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && yarn install && react-scripts build",
     "compile-scss": "node-sass src/assets/scss/eeg-app.scss src/assets/css/eeg-app.css",
     "minify-sass": "node-sass src/assets/scss/eeg-app.scss src/assets/css/eeg-app.min.css --output-style compressed",
     "map-sass": "node-sass src/assets/scss/eeg-app.scss src/assets/css/eeg-app.css --source-map true"
